[workspace]
resolver = "2"
members = [
    "cli",
    "common",
    "store",
    "crawler",
    "dns",
    "web",
    "dnsseeder",
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[workspace.package]
rust-version = "1.96.0"
authors = ["simply-kaspa-dnsseeder contributors"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
# Internal crates
simply-kaspa-dnsseeder-cli = { path = "cli" }
simply-kaspa-dnsseeder-common = { path = "common" }
simply-kaspa-dnsseeder-store = { path = "store" }
simply-kaspa-dnsseeder-crawler = { path = "crawler" }
simply-kaspa-dnsseeder-dns = { path = "dns" }
simply-kaspa-dnsseeder-web = { path = "web" }

# Kaspa / rusty-kaspa (pinned to tn10-toc3)
kaspa-p2p-lib = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "tn10-toc3" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "tn10-toc3" }
kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "tn10-toc3" }
kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "tn10-toc3" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "tn10-toc3" }
kaspa-utils-tower = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "tn10-toc3" }

# Async runtime + utilities
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
futures = "0.3.32"
async-trait = "0.1.89"
parking_lot = "0.12.5"

# HTTP server
axum = { version = "0.8.9", features = ["http1", "json", "tokio"] }
tower-http = { version = "0.6.11", features = ["cors", "trace", "set-header"] }
tower = "0.5.3"
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-axum = "0.2.0"

# DNS server
hickory-server = { version = "0.26.1", features = ["resolver"] }
hickory-proto = "0.26.1"
hickory-resolver = "0.26.1"

# Persistence
redb = "4.1.0"
# bincode 3.0.0 is intentionally unmaintained (upstream ships only a compiler error); stay on 2.x.
bincode = { version = "2.0.1", features = ["serde"] }

# Serialization & logging
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_bytes = "0.11.19"
env_logger = "0.11.10"
log = "0.4.30"

# CLI / time / misc
clap = { version = "4.6.1", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
humantime = "2.3.0"
humantime-serde = "1.1.1"
semver = "1.0.28"
dashmap = "7.0.0-rc2"
hex = "0.4.3"
uuid = { version = "1.23.1", features = ["v4"] }
rand = "0.10.1"
socket2 = "0.6.4"
thiserror = "2.0.18"
anyhow = "1.0.102"
sysinfo = "0.39.3"
bytesize = "2.3.1"

# Build info
vergen-git2 = "10.0.0-beta.8"

# Test-only
tempfile = "3.27.0"
tokio-test = "0.4.5"
