[package]
name = "simply-kaspa-dnsseeder-dns"
version = "0.1.0"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "simply_kaspa_dnsseeder_dns"

[dependencies]
simply-kaspa-dnsseeder-store.workspace = true

kaspa-consensus-core.workspace = true

hickory-server.workspace = true
hickory-proto.workspace = true

tokio.workspace = true
async-trait.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
hickory-resolver.workspace = true
tokio = { workspace = true, features = ["full", "test-util", "macros"] }
