[package]
name = "simply-kaspa-dnsseeder-store"
version = "0.1.0"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "simply_kaspa_dnsseeder_store"

[dependencies]
redb.workspace = true
bincode.workspace = true
serde.workspace = true
serde_bytes.workspace = true
chrono.workspace = true
log.workspace = true
hex.workspace = true
semver.workspace = true
thiserror.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
